intitution logo disabled

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,7 +90,7 @@
 
     <ImageButton
         android:id="@+id/entityLogo"
-        android:layout_width="50dp"
+        android:layout_width="60dp"
         android:layout_height="70dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
@@ -99,6 +99,7 @@
         android:contentDescription="@string/entity"
         android:onClick="pagewiew"
         android:text="Button"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
